Initial implementation of plucking an item from a set

--- a/test/Makefile
+++ b/test/Makefile
@@ -2,6 +2,10 @@ ifndef RM_INCLUDE_DIR
 	RM_INCLUDE_DIR=../deps
 endif
 
+ifndef RMUTIL_LIBDIR
+	RMUTIL_LIBDIR=$(RM_INCLUDE_DIR)/rmutil
+endif
+
 ifndef RMLOGGING_LIBDIR
 	RMLOGGING_LIBDIR=$(RM_INCLUDE_DIR)/logging
 endif
@@ -13,7 +17,7 @@ endif
 CFLAGS = -Wall -g -fPIC -lc -O2 -std=gnu99
 CC=gcc
 
-OBJS=$(SRC_DIR)/muten.o $(RMLOGGING_LIBDIR)/logging.o
+OBJS=$(SRC_DIR)/muten.o $(RMLOGGING_LIBDIR)/logging.o $(RMUTIL_LIBDIR)/*.o
 
 muten_test: muten_test.c $(OBJS)
 	$(CC) $@.c $(OBJS) -o $@
