--- a/test/Makefile
+++ b/test/Makefile
@@ -6,10 +6,6 @@ ifndef RMUTIL_LIBDIR
 	RMUTIL_LIBDIR=$(RM_INCLUDE_DIR)/rmutil
 endif
 
-ifndef RMLOGGING_LIBDIR
-	RMLOGGING_LIBDIR=$(RM_INCLUDE_DIR)/logging
-endif
-
 ifndef SRC_DIR
 	SRC_DIR=../src
 endif
@@ -17,7 +13,7 @@ endif
 CFLAGS = -Wall -g -fPIC -lc -O2 -std=gnu99
 CC=gcc
 
-OBJS=$(SRC_DIR)/muten.o $(RMLOGGING_LIBDIR)/logging.o $(RMUTIL_LIBDIR)/*.o
+OBJS=$(SRC_DIR)/muten.o $(RMUTIL_LIBDIR)/*.o
 
 muten_test: muten_test.c $(OBJS)
 	$(CC) $@.c $(OBJS) -o $@
